answers renamed to questions mock for sentence modified

--- a/src/main/resources/static/templates/questionTypes.html
+++ b/src/main/resources/static/templates/questionTypes.html
@@ -1,4 +1,4 @@
-<p ng-init="showSubPage = 'showList'">Question's types</p>
+<h4 ng-init="showSubPage = 'showList'">Question's types</h4>
 <div class="btn-group" role="group" aria-label="">
     <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showList'">Show List</button>
     <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showNew'">Add New</button>
