--- a/src/main/resources/static/templates/lessons.html
+++ b/src/main/resources/static/templates/lessons.html
@@ -1,4 +1,4 @@
-<p ng-init="showSubPage = 'showListLesson'">Lesson's list</p>
+<h4 ng-init="showSubPage = 'showListLesson'">Lessons</h4>
 <div class="btn-group" role="group" aria-label="">
     <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showListLesson'">Show List</button>
     <button type="button" class="btn btn-secondary" ng-click="showSubPage = 'showNewLesson'">Add New</button>
