--- a/src/main/resources/static/templates/sentences.html
+++ b/src/main/resources/static/templates/sentences.html
@@ -12,7 +12,7 @@
     <input type="text" class="form-control" ng-model="entity.name" placeholder="Name">
 
     <!--input type="text" class="form-control" ng-model="entity.qtsentence.question" placeholder="Question">
-    <input type="text" class="form-control" ng-model="entity.qtsentence.answer" placeholder="Answer">
+    <input type="text" class="form-control" ng-model="entity.qtsentence.answer" placeholder="Question">
     <input type="text" class="form-control" ng-model="entity.qtsentence.keyboard"
            placeholder="KeyBoard rows separeted by ';'"-->
     <br>
@@ -30,7 +30,7 @@
     <div class="list-group-item" ng-repeat="entity in sentences | orderBy: 'name'">
         <div class="row">
             <div class="col-md-6">{{ entity.name }}</div>
-            <div class="col-md-6"><i>{{ entity.description }}</i></div>
+            <div class="col-md-6"><i>( {{ entity.questions.length }} questions) </i></div>
         </div>
     </div>
 </div>
