--- a/src/main/resources/static/templates/lessons.html
+++ b/src/main/resources/static/templates/lessons.html
@@ -47,7 +47,7 @@
 
 <div ng-if="showSubPage == 'showListLesson'" style="height: 500px; overflow-y: scroll;">
     <br>
-    <div class="list-group-item" ng-repeat="entity in lessons | orderBy: 'name'">
+    <div class="list-group-item" ng-repeat="entity in lessons | orderBy: 'name' : false : alphaLengthComparator">
         <div class="row">
             <div class="col-md-6">{{ entity.name }}</div>
             <div class="col-md-6"><i>{{ entity.description }}</i></div>
