--- a/src/main/resources/static/templates/sentences.html
+++ b/src/main/resources/static/templates/sentences.html
@@ -9,12 +9,33 @@
 
 <div ng-if="showSubPage == 'showNew'">
     <br>
+
     <input type="text" class="form-control" ng-model="entity.name" placeholder="Name">
 
-    <!--input type="text" class="form-control" ng-model="entity.qtsentence.question" placeholder="Question">
-    <input type="text" class="form-control" ng-model="entity.qtsentence.answer" placeholder="Question">
-    <input type="text" class="form-control" ng-model="entity.qtsentence.keyboard"
-           placeholder="KeyBoard rows separeted by ';'"-->
+    <div class="row" style="padding: 0px 16px 0px 16px">
+        <select class="form-control col-xl-11" ng-model="currentQT"
+                ng-options="qt as qt.name for qt in questionTypes">
+        </select>
+        <button type="button" class="btn btn-success float-right col-xl-1" ng-click="addQuestion(entity, currentQT)">Add
+            question
+        </button>
+    </div>
+
+    <br>
+    <div style="height: 400px; overflow-y: scroll;">
+        <div class="row" ng-repeat="q in entity.questions" style="padding: 30px 16px 0px 16px;">
+            <h4> {{ q.questionType.name }}</h4>
+            <button type="button" class="float-right btn btn-warning btn-sm" ng-click="removeQuestion(entity, q)">
+                Remove
+            </button>
+            <input type="text" class="form-control" ng-model="q.highlightedSentence"
+                   placeholder="Type the sentence with UPPERCASE word">
+            <input type="text" class="form-control" ng-model="q.question"
+                   placeholder="Type correct question for validation">
+            <input type="text" class="form-control" ng-model="q.keyboard"
+                   placeholder="Type buttons for bot keyboard (Use ; as delimiter)">
+        </div>
+    </div>
     <br>
 
     <button type="button" class="btn btn-secondary float-right" ng-click="saveSentence(entity)">Save
@@ -22,7 +43,45 @@
 </div>
 
 <div ng-if="showSubPage == 'showModify'">
-    <p>TODO</p>
+    <br>
+
+    <select class="form-control" ng-model="currentEntity"
+            ng-options="entity as entity.name for entity in sentences">
+    </select>
+    <br>
+    <div ng-if="currentEntity">
+        <input type="text" class="form-control" ng-model="currentEntity.name" placeholder="Name">
+
+        <div class="row" style="padding: 0px 16px 0px 16px">
+            <select class="form-control col-xl-11" ng-model="currentQT"
+                    ng-options="qt as qt.name for qt in questionTypes">
+            </select>
+            <button type="button" class="btn btn-success float-right col-xl-1"
+                    ng-click="addQuestion(currentEntity, currentQT)">Add
+                question
+            </button>
+        </div>
+
+        <br>
+        <div style="height: 400px; overflow-y: scroll;">
+            <div class="row" ng-repeat="q in currentEntity.questions" style="padding: 30px 16px 0px 16px;">
+                <h4> {{ q.questionType.name }}</h4>
+                <button type="button" class="float-right btn btn-warning btn-sm" ng-click="removeQuestion(currentEntity, q)">
+                    Remove
+                </button>
+                <input type="text" class="form-control" ng-model="q.highlightedSentence"
+                       placeholder="Type the sentence with UPPERCASE word">
+                <input type="text" class="form-control" ng-model="q.question"
+                       placeholder="Type correct question for validation">
+                <input type="text" class="form-control" ng-model="q.keyboard"
+                       placeholder="Type buttons for bot keyboard (Use ; as delimiter)">
+            </div>
+        </div>
+        <br>
+
+        <button type="button" class="btn btn-secondary float-right" ng-click="saveSentence(currentEntity)">Save
+        </button>
+    </div>
 </div>
 
 <div ng-if="showSubPage == 'showList'" style="height: 500px; overflow-y: scroll;">
