--- a/src/main/resources/static/templates/modify_sentence.html
+++ b/src/main/resources/static/templates/modify_sentence.html
@@ -29,8 +29,9 @@
                         ng-click="removeQuestion(currentEntity, q)">Удалить вопрос
                 </button>
 
-                <input type="text" class="form-control" ng-model="q.highlightedSentence"
-                       placeholder="Type the sentence with UPPERCASE word">
+                <textarea type="text" class="form-control" rows="3" ng-model="q.highlightedSentence"
+                       placeholder="Type the sentence with UPPERCASE word, '*', '_' - markdown symbols">
+                </textarea>
                 <input type="text" class="form-control" ng-model="q.question"
                        placeholder="Type correct question for validation">
 
