--- a/src/main/resources/static/templates/sentences/sentences.html
+++ b/src/main/resources/static/templates/sentences/sentences.html
@@ -2,19 +2,27 @@
     {{ sentenceAlert }}
 </div>
 
-<h4 ng-init="$root.currentSentenceTemplate = 'templates/sentences/list_sentences.html'" style="padding: 16px 0px 16px 0px">
-    Предложения</h4>
+<h4 ng-init="$root.currentSentenceTemplate = 'templates/sentences/list_sentences.html'"
+    style="padding: 16px 0px 16px 0px">
+    Предложения
+</h4>
 
-<div class="btn-group" role="group" aria-label="">
-    <button type="button" class="btn btn-secondary"
-            ng-click="$root.currentSentenceTemplate = 'templates/sentences/list_sentences.html'">Список предложений
-    </button>
-    <button type="button" class="btn btn-secondary"
-            ng-click="$root.currentSentenceTemplate = 'templates/sentences/add_sentence.html'">Добавить предложение
-    </button>
-    <button type="button" class="btn btn-secondary"
-            ng-click="$root.currentSentenceTemplate = 'templates/sentences/modify_sentence.html'">Изменить предложение
-    </button>
+<div class="row">
+    <div class="btn-group col-md-8" role="group" aria-label="">
+        <button type="button" class="btn btn-secondary"
+                ng-click="$root.currentSentenceTemplate = 'templates/sentences/list_sentences.html'">Список предложений
+        </button>
+        <button type="button" class="btn btn-secondary"
+                ng-click="$root.currentSentenceTemplate = 'templates/sentences/add_sentence.html'">Добавить предложение
+        </button>
+        <button type="button" class="btn btn-secondary"
+                ng-click="$root.currentSentenceTemplate = 'templates/sentences/modify_sentence.html'">Изменить
+            предложение
+        </button>
+    </div>
+    <div class="col-md-4 float-right">
+        <input class="form-control" type="text" ng-model="sentenceFilter" placeholder="Поиск предложений"/>
+    </div>
 </div>
 
 <br>
