--- a/src/main/resources/static/templates/lessons/list_lessons.html
+++ b/src/main/resources/static/templates/lessons/list_lessons.html
@@ -6,8 +6,8 @@
             <div class="col-md-3">{{ entity.name }}</div>
             <div class="col-md-6"><i>{{ entity.description }}</i></div>
             <div class="col-md-2">
-                <button class="btn btn-info btn-sm float-right"
-                        ng-click="selected = !selected; foundSentences = findSentences(entity)">Предложения
+                <button class="btn btn-info btn-sm float-right" ng-init="foundSentences = findSentences(entity)"
+                        ng-click="selected = !selected">Предложения ({{ foundSentences.length }})
                 </button>
             </div>
             <div class="col-md-1">
